# mcp-gke-log-server

./: CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  healthcheck.py  pyproject.toml  requirements.txt
gke_logs_mcp/: __init__.py  server.py
k8s/: deployment.yaml
scripts/: setup-gcp.sh
tests/: conftest.py  test_healthcheck.py  test_server.py
